metadata/sf-prod/force-app/main/default/objects/Default_Account_Subsidiary__c/Default_Account_Subsidiary__c.object-meta.xml
<CustomObject>
    <description>Overrides the default subsidiary for an account and class</description>
    <label>Default Account Subsidiary</label>
    <nameField>
        <displayFormat>DAS-{0000}</displayFormat>
        <label>Default Account Subsidiary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Account Subsidiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>