metadata/sf-prod/force-app/main/default/objects/Default_Account_Subsidiary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account that has a default subsidiary that needs to be used when creating quotes and subscriptions</description>
    <inlineHelpText>Account that has a default subsidiary that needs to be used when creating quotes and subscriptions</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Default Account Subsidiaries</relationshipLabel>
    <relationshipName>Default_Account_Subsidiaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>