metadata/sf-prod/force-app/main/default/objects/Default_Account_Subsidiary__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product for which Account has a default subsidiary that needs to be used when creating quotes and subscriptions</description>
    <inlineHelpText>Product for which Account has a default subsidiary that needs to be used when creating quotes and subscriptions</inlineHelpText>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>