metadata/sf-prod/force-app/main/default/objects/Default_Account_Subsidiary__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>Default subsidiary that will be used when creating quotes and subscriptions</description>
    <inlineHelpText>Default subsidiary that will be used when creating quotes and subscriptions</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Default Account Subsidiaries</relationshipLabel>
    <relationshipName>Default_Account_Subsidiaries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>